fix: fix z-index for cards

--- a/src/app/components/game-card/game-card.component.scss
+++ b/src/app/components/game-card/game-card.component.scss
@@ -20,3 +20,7 @@
   left: 5px;
   color: gold;
 }
+
+.card {
+  z-index: -1;
+}
